# symlens

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml  release.yml
benches/: bench_cli.sh  codelens_bench.rs  symlens_bench.rs
docs/: commands.md
skills-test/: README.md
skills-test/symlens/evals/: evals.json
src/: cli.rs  config.rs  lib.rs  main.rs  wasm.rs
src/commands/: blame.rs  callers.rs  completions.rs  diff.rs  doctor.rs  export.rs  graph.rs  index.rs  init.rs  lines.rs  mcp.rs  mod.rs  outline.rs  refs.rs  search.rs  setup.rs  stats.rs  symbol.rs  watch.rs
src/commands/templates/: claude_code_register.md  claude_code_section.md  claude_code_skill.md  cursor_rule.md  openclaw_skill.md
src/daemon/: client.rs  mod.rs  rpc.rs  socket.rs
src/graph/: call_graph.rs  deps.rs  impact.rs  mod.rs  path.rs
src/index/: indexer.rs  mod.rs  storage.rs
src/model/: mod.rs  project.rs  symbol.rs  workspace.rs
src/output/: color.rs  compact.rs  json.rs  mod.rs
src/parser/: c.rs  cpp.rs  dart.rs  go.rs  helpers.rs  kotlin.rs  mod.rs  python.rs  registry.rs  rust.rs  swift.rs  traits.rs  typescript.rs  vue.rs
src/refs/: mod.rs
src/search/: bm25.rs  tokenizer.rs
tests/: daemon_test.rs  integration_test.rs
tests/fixtures/: sample.c  sample.cpp  sample.dart  sample.go  sample.kt  sample.py  sample.rs  sample.swift  sample.ts  sample.vue
