[package]
name = "codelens"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Token-efficient code intelligence CLI powered by tree-sitter"
authors = ["TtTRz <romc1224@gmail.com>"]
license = "MIT"

[lib]
name = "codelens"
path = "src/lib.rs"

[[bin]]
name = "codelens"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# tree-sitter core + languages
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-go = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Full-text search
tantivy = "0.22"

# Call graph
petgraph = "0.7"

# File system
ignore = "0.4"
notify = "7"

# Hash
blake3 = "1"

# Parallel
rayon = "1"

# Error handling
anyhow = "1"

[features]
default = []
mcp = ["tokio", "tower-lsp"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-std"]
optional = true

[dependencies.tower-lsp]
version = "0.20"
optional = true

[profile.release]
lto = true
strip = true
codegen-units = 1
