[package]
name = "symlens"
version = "0.2.2"
edition = "2024"
rust-version = "1.92"
description = "Token-efficient code intelligence CLI powered by tree-sitter — search symbols, call graphs, and impact analysis without reading entire files"
authors = ["TtTRz <romc1224@gmail.com>"]
license = "MIT"
repository = "https://github.com/TtTRz/symlens"
homepage = "https://github.com/TtTRz/symlens"
readme = "README.md"
keywords = ["code-intelligence", "tree-sitter", "symbol-search", "call-graph", "mcp"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["graphify-out/", "tests/fixtures/", ".github/"]

[lib]
name = "symlens"
path = "src/lib.rs"

[[bin]]
name = "symlens"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# tree-sitter core + languages
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-go = "0.25"
tree-sitter-dart = "0.1"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
toml = "1.1"

# Full-text search
tantivy = "0.26"

# Call graph
petgraph = "0.8"

# File system
ignore = "0.4"
notify = "8"

# Hash
blake3 = "1"

# Parallel
rayon = "1"

# Error handling
anyhow = "1"

[features]
default = []
mcp = ["tokio", "tower-lsp"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-std"]
optional = true

[dependencies.tower-lsp]
version = "0.20"
optional = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "symlens_bench"
harness = false
