[package]
name = "symlens"
version = "0.8.0"
edition = "2024"
rust-version = "1.92"
description = "Token-efficient code intelligence CLI powered by tree-sitter — search symbols, call graphs, and impact analysis without reading entire files"
authors = ["TtTRz <romc1224@gmail.com>"]
license = "MIT"
repository = "https://github.com/TtTRz/symlens"
homepage = "https://github.com/TtTRz/symlens"
readme = "README.md"
keywords = ["code-intelligence", "tree-sitter", "symbol-search", "call-graph", "mcp"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["graphify-out/", "tests/fixtures/", ".github/"]

[lib]
name = "symlens"
path = "src/lib.rs"

[[bin]]
name = "symlens"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "dep:clap",
    "dep:clap_complete",
    "dep:tantivy",
    "dep:ignore",
    "dep:notify",
    "dep:blake3",
    "dep:rayon",
    "dep:toml",
    "dep:rusqlite",
]
mcp = ["native", "dep:tokio", "dep:rmcp", "dep:schemars"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
# === Always available (WASM-compatible) ===

# tree-sitter core + languages
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-go = "0.25"
tree-sitter-dart = "0.1"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"

# Serialization (core)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }

# Call graph
petgraph = "0.8"

# === Native-only (optional) ===

# CLI framework
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }

# Config
toml = { version = "1.1", optional = true }

# Full-text search
tantivy = { version = "0.26", optional = true }

# File system
ignore = { version = "0.4", optional = true }
notify = { version = "8", optional = true }

# Hash
blake3 = { version = "1", optional = true }

# Parallel
rayon = { version = "1", optional = true }

# SQLite export
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# Error handling
anyhow = "1"

# === MCP-only (optional) ===

[dependencies.schemars]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-std"]
optional = true

[dependencies.rmcp]
version = "1.4"
features = ["server", "macros", "schemars", "transport-io"]
optional = true

# === WASM-only (optional) ===

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
rusqlite = { version = "0.34", features = ["bundled"] }

[[bench]]
name = "symlens_bench"
harness = false
